@@ -1,17 +1,5 @@
 package com.spacedlearning.service.impl;
 
-import java.util.List;
-import java.util.Objects;
-import java.util.UUID;
-import java.util.stream.Collectors;
-
-import org.apache.commons.lang3.StringUtils;
-import org.springframework.context.MessageSource;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-
 import com.spacedlearning.dto.book.BookCreateRequest;
 import com.spacedlearning.dto.book.BookDetailResponse;
 import com.spacedlearning.dto.book.BookSummaryResponse;
@@ -25,9 +13,18 @@ import com.spacedlearning.mapper.BookMapper;
 import com.spacedlearning.repository.BookRepository;
 import com.spacedlearning.repository.UserRepository;
 import com.spacedlearning.service.BookService;
-
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
+import org.springframework.context.MessageSource;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
+import java.util.List;
+import java.util.Objects;
+import java.util.UUID;
 
 /**
  * Implementation of BookService
@@ -37,6 +34,9 @@ import lombok.extern.slf4j.Slf4j;
 @Slf4j
 public class BookServiceImpl implements BookService {
 
+    public static final String BOOK_ID_MUST_NOT_BE_NULL = "Book ID must not be null";
+    public static final String RESOURCE_BOOK = "resource.book";
+    public static final String PAGEABLE_MUST_NOT_BE_NULL = "Pageable must not be null";
     private final BookRepository bookRepository;
     private final UserRepository userRepository;
     private final BookMapper bookMapper;
@@ -59,11 +59,11 @@ public class BookServiceImpl implements BookService {
     @Override
     @Transactional
     public void delete(final UUID id) {
-        Objects.requireNonNull(id, "Book ID must not be null");
+        Objects.requireNonNull(id, BOOK_ID_MUST_NOT_BE_NULL);
         log.debug("Deleting book with ID: {}", id);
 
         final Book book = bookRepository.findById(id)
-                .orElseThrow(() -> SpacedLearningException.resourceNotFound(messageSource, "resource.book", id));
+                .orElseThrow(() -> SpacedLearningException.resourceNotFound(messageSource, RESOURCE_BOOK, id));
 
         book.softDelete(); // Use soft delete
         bookRepository.save(book);
@@ -74,7 +74,7 @@ public class BookServiceImpl implements BookService {
     @Override
     @Transactional(readOnly = true)
     public Page<BookSummaryResponse> findAll(final Pageable pageable) {
-        Objects.requireNonNull(pageable, "Pageable must not be null");
+        Objects.requireNonNull(pageable, PAGEABLE_MUST_NOT_BE_NULL);
         log.debug("Finding all books with pagination: {}", pageable);
 
         return bookRepository.findAll(pageable).map(bookMapper::toSummaryDto);
@@ -83,9 +83,9 @@ public class BookServiceImpl implements BookService {
     @Override
     @Transactional(readOnly = true)
     public Page<BookSummaryResponse> findByFilters(final BookStatus status, final DifficultyLevel difficultyLevel,
-            final String category, final Pageable pageable) {
+                                                   final String category, final Pageable pageable) {
 
-        Objects.requireNonNull(pageable, "Pageable must not be null");
+        Objects.requireNonNull(pageable, PAGEABLE_MUST_NOT_BE_NULL);
         log.debug("Finding books by filters - status: {}, difficultyLevel: {}, category: {}, pageable: {}", status,
                 difficultyLevel, category, pageable);
 
@@ -96,11 +96,11 @@ public class BookServiceImpl implements BookService {
     @Override
     @Transactional(readOnly = true)
     public BookDetailResponse findById(final UUID id) {
-        Objects.requireNonNull(id, "Book ID must not be null");
+        Objects.requireNonNull(id, BOOK_ID_MUST_NOT_BE_NULL);
         log.debug("Finding book by ID: {}", id);
 
         return bookRepository.findWithModulesById(id).map(bookMapper::toDto)
-                .orElseThrow(() -> SpacedLearningException.resourceNotFound(messageSource, "resource.book", id));
+                .orElseThrow(() -> SpacedLearningException.resourceNotFound(messageSource, RESOURCE_BOOK, id));
     }
 
     @Override
@@ -113,7 +113,7 @@ public class BookServiceImpl implements BookService {
     @Override
     @Transactional(readOnly = true)
     public Page<BookSummaryResponse> searchByName(final String searchTerm, final Pageable pageable) {
-        Objects.requireNonNull(pageable, "Pageable must not be null");
+        Objects.requireNonNull(pageable, PAGEABLE_MUST_NOT_BE_NULL);
         log.debug("Searching books by name containing: {}", searchTerm);
 
         if (StringUtils.isBlank(searchTerm)) {
@@ -127,12 +127,12 @@ public class BookServiceImpl implements BookService {
     @Override
     @Transactional
     public BookDetailResponse update(final UUID id, final BookUpdateRequest request) {
-        Objects.requireNonNull(id, "Book ID must not be null");
+        Objects.requireNonNull(id, BOOK_ID_MUST_NOT_BE_NULL);
         Objects.requireNonNull(request, "Book update request must not be null");
         log.debug("Updating book with ID: {}, request: {}", id, request);
 
         final Book book = bookRepository.findById(id)
-                .orElseThrow(() -> SpacedLearningException.resourceNotFound(messageSource, "resource.book", id));
+                .orElseThrow(() -> SpacedLearningException.resourceNotFound(messageSource, RESOURCE_BOOK, id));
 
         bookMapper.updateFromDto(request, book);
         final Book updatedBook = bookRepository.save(book);
@@ -144,7 +144,7 @@ public class BookServiceImpl implements BookService {
     @Override
     @Transactional
     public int shareBookWithUsers(UUID bookId, List<UUID> userIds) {
-        Objects.requireNonNull(bookId, "Book ID must not be null");
+        Objects.requireNonNull(bookId, BOOK_ID_MUST_NOT_BE_NULL);
         Objects.requireNonNull(userIds, "User IDs list must not be null");
 
         if (userIds.isEmpty()) {
@@ -154,7 +154,7 @@ public class BookServiceImpl implements BookService {
         log.debug("Sharing book ID: {} with {} users", bookId, userIds.size());
 
         final Book book = bookRepository.findById(bookId)
-                .orElseThrow(() -> SpacedLearningException.resourceNotFound(messageSource, "resource.book", bookId));
+                .orElseThrow(() -> SpacedLearningException.resourceNotFound(messageSource, RESOURCE_BOOK, bookId));
 
         final List<User> users = userRepository.findAllById(userIds);
 
@@ -177,7 +177,7 @@ public class BookServiceImpl implements BookService {
     @Override
     @Transactional
     public int unshareBookFromUsers(UUID bookId, List<UUID> userIds) {
-        Objects.requireNonNull(bookId, "Book ID must not be null");
+        Objects.requireNonNull(bookId, BOOK_ID_MUST_NOT_BE_NULL);
         Objects.requireNonNull(userIds, "User IDs list must not be null");
 
         if (userIds.isEmpty()) {
@@ -187,7 +187,7 @@ public class BookServiceImpl implements BookService {
         log.debug("Unsharing book ID: {} from {} users", bookId, userIds.size());
 
         final Book book = bookRepository.findById(bookId)
-                .orElseThrow(() -> SpacedLearningException.resourceNotFound(messageSource, "resource.book", bookId));
+                .orElseThrow(() -> SpacedLearningException.resourceNotFound(messageSource, RESOURCE_BOOK, bookId));
 
         final List<User> users = userRepository.findAllById(userIds);
 
@@ -209,14 +209,14 @@ public class BookServiceImpl implements BookService {
     @Override
     @Transactional(readOnly = true)
     public List<UUID> getUsersWithAccessToBook(UUID bookId) {
-        Objects.requireNonNull(bookId, "Book ID must not be null");
+        Objects.requireNonNull(bookId, BOOK_ID_MUST_NOT_BE_NULL);
         log.debug("Getting users with access to book ID: {}", bookId);
 
         final Book book = bookRepository.findById(bookId)
-                .orElseThrow(() -> SpacedLearningException.resourceNotFound(messageSource, "resource.book", bookId));
+                .orElseThrow(() -> SpacedLearningException.resourceNotFound(messageSource, RESOURCE_BOOK, bookId));
 
         return book.getUsers().stream()
                 .map(User::getId)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
